chg: all options should be shown in 2 lines

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -57,7 +57,7 @@
     "Non Veg": "নন ভেগ",
     "Egg": "ডিম",
     "Required": "প্রয়োজন",
-    "All Options": "সমস্ত বিকল্প",
+    "All Options": "সমস্ত\nবিকল্প",
     "Edit": "সম্পাদনা করুন",
     "Qty": "কিউটি",
     "Outlet Details": {
