--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -57,7 +57,7 @@
     "Non Veg": "Non Veg",
     "Egg": "Egg",
     "Required": "Required",
-    "All Options": "All Options",
+    "All Options": "All\nOptions",
     "Edit": "Edit",
     "Qty": "Qty",
     "Outlet Details": {
