--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -57,7 +57,7 @@
     "Non Veg": "नॉन वेग",
     "Egg": "अंडा",
     "Required": "आवश्यक",
-    "All Options": "सभी विकल्प",
+    "All Options": "सभी\nविकल्प",
     "Edit": "संपादन करना",
     "Qty": "क्यूटी",
     "Outlet Details": {
