--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -57,7 +57,7 @@
     "Non Veg": "नॉन वेग",
     "Egg": "अंडी",
     "Required": "आवश्यक आहे",
-    "All Options": "सर्व पर्याय",
+    "All Options": "सर्व\nपर्याय",
     "Edit": "सुधारणे",
     "Qty": "क्यूटी",
     "Outlet Details": {
