--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -57,7 +57,7 @@
     "Non Veg": "நான் வெக்",
     "Egg": "முட்டை",
     "Required": "தேவை",
-    "All Options": "அனைத்து விருப்பங்களும்",
+    "All Options": "அனைத்து\nவிருப்பங்களும்",
     "Edit": "தொகு",
     "Qty": "குட்டி",
     "Outlet Details": {
