chg: update address message, remove duplicate again

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -138,7 +138,8 @@
     "City": "City",
     "State": "State",
     "Address Type": "Address Type",
-    "Save": "Save"
+    "Save": "Save",
+    "Your delivery address has been updated successfully": "Your delivery address has been updated successfully"
   },
   "Categories": {
     "Fashion": "Fashion",
