--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -138,7 +138,8 @@
     "City": "सिटी",
     "State": "स्टेट",
     "Address Type": "पत्त्याचा प्रकार",
-    "Save": "जतन करा"
+    "Save": "जतन करा",
+    "Your delivery address has been updated successfully": "तुमचा वितरण पत्ता यशस्वीरित्या अपडेट केला गेला आहे"
   },
   "Categories": {
     "Fashion": "फॅशन",
