--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -138,7 +138,8 @@
     "City": "சிட்டி",
     "State": "ஸ்டேட்",
     "Address Type": "முகவரி வகை",
-    "Save": "சேமிக்கவும்"
+    "Save": "சேமிக்கவும்",
+    "Your delivery address has been updated successfully": "உங்கள் டெலிவரி முகவரி வெற்றிகரமாக புதுப்பிக்கப்பட்டது"
   },
   "Categories": {
     "Fashion": "ஃபேஷன்",
