--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -138,7 +138,8 @@
     "City": "সিটি",
     "State": "স্টেট",
     "Address Type": "ঠিকানার ধরন",
-    "Save": "সংরক্ষণ"
+    "Save": "সংরক্ষণ",
+    "Your delivery address has been updated successfully": "আপনার বিতরণ ঠিকানা সফলভাবে আপডেট করা হয়েছে"
   },
   "Categories": {
     "Fashion": "ফ্যাশন",
