chg: get order status in background

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -108,7 +108,8 @@
     "Cancellable": "বাতিলযোগ্য",
     "Non-cancellable": "বাতিলযোগ্য নয়",
     "Returnable": "ফেরতযোগ্য",
-    "Non-returnable": "অ-ফেরত"
+    "Non-returnable": "অ-ফেরত",
+    "Order status updated successfully": "অর্ডার স্থিতি সফলভাবে আপডেট করা হয়েছে"
   },
   "Choose Language": {
     "Hindi": "हिंदी",
