--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -60,6 +60,7 @@
     "All Options": "সমস্ত\nবিকল্প",
     "Edit": "সম্পাদনা করুন",
     "Qty": "কিউটি",
+    "Add new customization": "নতুন কাস্টমাইজেশন যোগ করুন",
     "Outlet Details": {
       "Get Direction": "দিকনির্দেশ পান",
       "Call Now": "এখন ডাকো",
@@ -491,7 +492,12 @@
   },
   "Product Summary": {
     "Your Items": "আপনার আইটেম",
-    "Order Total": "আদেশ মোট"
+    "Order Total": "আদেশ মোট",
+    "Add Item Total": "মোট আইটেম যোগ করুন - {{total}}",
+    "Update Item Total": "মোট আইটেম আপডেট করুন - {{total}}",
+    "Item added to cart successfully": "আইটেম সফলভাবে কার্ট যোগ করা হয়েছে.",
+    "Item quantity updated in your cart": "আপনার কার্টে আইটেমের পরিমাণ আপডেট করা হয়েছে",
+    "The maximum available quantity for item is already in your cart": "আইটেমের জন্য সর্বাধিক উপলব্ধ পরিমাণ ইতিমধ্যেই আপনার কার্টে রয়েছে৷"
   },
   "Provider Details": {
     "Order Cancelled": "অর্ডার বাতিল"
