--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -60,6 +60,7 @@
     "All Options": "All\nOptions",
     "Edit": "Edit",
     "Qty": "Qty",
+    "Add new customization": "Add new customization",
     "Outlet Details": {
       "Get Direction": "Get Direction",
       "Call Now": "Call Now",
@@ -491,7 +492,12 @@
   },
   "Product Summary": {
     "Your Items": "Your Items",
-    "Order Total": "Order Total"
+    "Order Total": "Order Total",
+    "Add Item Total": "Add Item Total - {{total}}",
+    "Update Item Total": "Update Item Total - {{total}}",
+    "Item added to cart successfully": "Item added to cart successfully.",
+    "Item quantity updated in your cart": "Item quantity updated in your cart",
+    "The maximum available quantity for item is already in your cart": "The maximum available quantity for item is already in your cart"
   },
   "Provider Details": {
     "Order Cancelled": "Order Cancelled"
