--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -60,6 +60,7 @@
     "All Options": "सभी\nविकल्प",
     "Edit": "संपादन करना",
     "Qty": "क्यूटी",
+    "Add new customization": "नया अनुकूलन जोड़ें",
     "Outlet Details": {
       "Get Direction": "दिशा प्राप्त करें",
       "Call Now": "अब कॉल करें",
@@ -491,7 +492,12 @@
   },
   "Product Summary": {
     "Your Items": "आपके आइटम",
-    "Order Total": "कुल आर्डर"
+    "Order Total": "कुल आर्डर",
+    "Add Item Total": "कुल आइटम जोड़ें - {{total}}",
+    "Update Item Total": "अद्यतन आइटम कुल - {{total}}",
+    "Item added to cart successfully": "आइटम सफलतापूर्वक कार्ट में जोड़ा गया.",
+    "Item quantity updated in your cart": "आपके कार्ट में आइटम की मात्रा अपडेट की गई",
+    "The maximum available quantity for item is already in your cart": "आइटम के लिए अधिकतम उपलब्ध मात्रा पहले से ही आपके कार्ट में है"
   },
   "Provider Details": {
     "Order Cancelled": "आदेश रद्द किया गया"
