chg: title of QR scanner page

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -544,5 +544,8 @@
   },
   "Global": {
     "Details not available": "Store Details not available"
+  },
+  "Seller QR": {
+    "ONDC QR se Bharat Khulega": "ONDC QR se Bharat Khulega"
   }
 }
