--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -544,5 +544,8 @@
   },
   "Global": {
     "Details not available": "स्टोर विवरण उपलब्ध नहीं है"
+  },
+  "Seller QR": {
+    "ONDC QR se Bharat Khulega": "ओएनडीसी क्यूआर से भारत खुलेगा"
   }
 }
