--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -544,5 +544,8 @@
   },
   "Global": {
     "Details not available": "स्टोअर तपशील उपलब्ध नाहीत"
+  },
+  "Seller QR": {
+    "ONDC QR se Bharat Khulega": "ओएनडीसी क्यूआर से भारत खुलेगा"
   }
 }
