--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -544,5 +544,8 @@
   },
   "Global": {
     "Details not available": "ஸ்டோர் விவரங்கள் கிடைக்கவில்லை"
+  },
+  "Seller QR": {
+    "ONDC QR se Bharat Khulega": "ஒஎன்டிசி கியூஆர் சே பாரத் குலேகா"
   }
 }
