--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -544,5 +544,8 @@
   },
   "Global": {
     "Details not available": "বস্টোরের বিবরণ পাওয়া যায় না"
+  },
+  "Seller QR": {
+    "ONDC QR se Bharat Khulega": "ওএনডিসি কিউআর সে ভারত খুলেগা"
   }
 }
