--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -446,6 +446,7 @@
     "Return Items": "Return Items"
   },
   "Return Item": {
+    "Return Item": "Return Item",
     "Select reason": "Select reason",
     "Upload Images": "Upload Images",
     "Browse": "Browse"
