--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -446,6 +446,7 @@
     "Return Items": "सामान वापस करे"
   },
   "Return Item": {
+    "Return Item": "रिटर्न इतेम",
     "Select reason": "कारण चुनें",
     "Upload Images": "तश्वीरें अपलोड करो",
     "Browse": "ब्राउज़"
