--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -446,6 +446,7 @@
     "Return Items": "आयटम परत करा"
   },
   "Return Item": {
+    "Return Item": "रिटर्न आयटेम",
     "Select reason": "कारण निवडा",
     "Upload Images": "प्रतिमा अपलोड करा",
     "Browse": "ब्राउझ करा"
