--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -446,6 +446,7 @@
     "Return Items": "பொருட்களைத் திரும்பப் பெறுங்கள்"
   },
   "Return Item": {
+    "Return Item": "ரிட்டர்ன் ஐட்டம்",
     "Select reason": "காரணத்தைத் தேர்ந்தெடுக்கவும்",
     "Upload Images": "படங்களை பதிவேற்றவும்",
     "Browse": "உலாவவும்"
