--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -443,7 +443,11 @@
     "Phone Number": "फोन नंबर"
   },
   "Return Items": {
-    "Return Items": "आयटम परत करा"
+    "Return Items": "आयटम परत करा",
+    "Confirm": "कन्फर्म",
+    "Something went wrong, please try again": "काहीतरी चूक झाली, कृपया पुन्हा प्रयत्न करा",
+    "Something went wrong, product status cannot be updated": "काहीतरी चूक झाली, उत्पादन स्थिती अद्यतनित केली जाऊ शकत नाही",
+    "Cannot proceed with you request now. Please try again": "तुमच्या विनंतीसह आता पुढे जाऊ शकत नाही. कृपया पुन्हा प्रयत्न करा"
   },
   "Return Item": {
     "Return Item": "रिटर्न आयटेम",
