fix: , Return item button is visible for returned item in the shipment fulfillment, Once an fulfillment is delivered, the text should change from arriving to delivered, Shipment details (1/2) is not counting only shipment fulfillments. It is counting return as well, Item price is null for returned item, Item details vanish from the order tracking page, Return status are not human readable, it's the enums, Returned on is written as return on, Name alignment of an item shouldn't overflow

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -531,6 +531,7 @@
   "Shipment Details": {
     "Shipment Details": "চালান বিবরণ",
     "Items Arriving": "{{count}} আইটেম(গুলি) আসছে৷",
+    "Items Delivered": "{{count}} আইটেম(গুলি) বিতরণ করা হয়েছে৷",
     "Arriving On": "আগমন",
     "Delivered On": "বিতরণ"
   },
