--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -110,7 +110,13 @@
     "Non-cancellable": "ரத்து செய்ய முடியாதது",
     "Returnable": "திரும்பப் பெறக்கூடியது",
     "Non-returnable": "திரும்பப் பெற முடியாதது",
-    "Order status updated successfully": "ஆர்டர் நிலை வெற்றிகரமாக புதுப்பிக்கப்பட்டது"
+    "Order status updated successfully": "ஆர்டர் நிலை வெற்றிகரமாக புதுப்பிக்கப்பட்டது",
+    "Name": "பெயர்*",
+    "Email": "மின்னஞ்சல்*",
+    "Verified": "சரிபார்க்கப்பட்டது",
+    "Verify": "சரிபார்க்கவும்",
+    "Verify Email": "மின்னஞ்சலை உறுதிசெய்யுங்கள்",
+    "Email send": "உங்கள் மின்னஞ்சல் முகவரிக்கு மின்னஞ்சல் அனுப்பப்பட்டுள்ளது. உங்கள் கணக்கைச் சரிபார்க்க இணைப்பைக் கிளிக் செய்யவும்"
   },
   "Choose Language": {
     "Hindi": "हिंदी",
