chg: replace Shop by Category with Find Stores by category. Remove phone from address

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -202,8 +202,8 @@
   "Product SubCategories": {
     "Search": "অনুসন্ধান করুন",
     "Filter": "ছাঁকনি",
-    "Shop by Category": "শপ বি ক্যাটেগরি",
-    "Shop By Category": "শপ বি ক্যাটেগরি",
+    "Shop by Category": "বিভাগ অনুযায়ী দোকান খুঁজুন",
+    "Shop By Category": "বিভাগ অনুযায়ী দোকান খুঁজুন",
     "Fruits and Vegetables": "ফল এবং শাকসবজি",
     "Masala & Seasoning": "মসলা এবং সিজনিং",
     "Oil & Ghee": "তেল ও ঘি",
