--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -202,8 +202,8 @@
   "Product SubCategories": {
     "Search": "Search",
     "Filter": "Filter",
-    "Shop by Category": "Shop by Category",
-    "Shop By Category": "Shop By Category",
+    "Shop by Category": "Find Stores by category",
+    "Shop By Category": "Find Stores by category",
     "Fruits and Vegetables": "Fruits and Vegetables",
     "Masala & Seasoning": "Masala & Seasoning",
     "Oil & Ghee": "Oil & Ghee",
@@ -384,7 +384,7 @@
     "Cattle Feed": "Cattle Feed"
   },
   "SubCategories": {
-    "Shop By Category": "Shop By Category",
+    "Shop By Category": "Find Stores by category",
     "Fruits and Vegetables": "Fruits and Vegetables",
     "Masala & Seasoning": "Masala & Seasoning",
     "Oil & Ghee": "Oil & Ghee",
