--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -202,8 +202,8 @@
   "Product SubCategories": {
     "Search": "शोधा",
     "Filter": "फिल्टर करा",
-    "Shop by Category": "शॉप बाय कॅटेगरी",
-    "Shop By Category": "शॉप बाय कॅटेगरी",
+    "Shop by Category": "श्रेणीनुसार दुकाने शोधा",
+    "Shop By Category": "श्रेणीनुसार दुकाने शोधा",
     "Fruits and Vegetables": "फळे आणि भाज्या",
     "Masala & Seasoning": "मसाला आणि मसाला",
     "Oil & Ghee": "तेल आणि तूप",
