--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -202,8 +202,8 @@
   "Product SubCategories": {
     "Search": "தேடு",
     "Filter": "வடிகட்டி",
-    "Shop by Category": "ஷாப் பை கேட்டகரி",
-    "Shop By Category": "ஷாப் பை கேட்டகரி",
+    "Shop by Category": "வகை வாரியாக கடைகளைக் கண்டறியவும்",
+    "Shop By Category": "வகை வாரியாக கடைகளைக் கண்டறியவும்",
     "Fruits and Vegetables": "பழங்கள் மற்றும் காய்கறிகள்",
     "Masala & Seasoning": "மசாலா & மசாலா",
     "Oil & Ghee": "எண்ணெய் & நெய்",
