chg: remove fulfilment category names from system

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -185,7 +185,8 @@
     "Fulfilment no": "{{total}} এর মধ্যে {{current}}",
     "Delivered Today by": "{{time}} দ্বারা আজ বিতরিত",
     "Delivered In": "{{time}} মধ্যে বিতরণ করা হয়েছে",
-    "Delivered by": "{{date}} দ্বারা বিতরণ"
+    "Delivered by": "{{date}} দ্বারা বিতরণ",
+    "Self pickup by": "{{time}} দ্বারা স্ব-বাছাই"
   },
   "Featured Categories": {
     "Featured Categories": "ফিচার্ড ক্যাটেগরিস",
