--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -185,7 +185,8 @@
     "Fulfilment no": "{{total}} पैकी {{current}}",
     "Delivered Today by": "{{time}} वितरित केले",
     "Delivered In": "{{time}} वितरित",
-    "Delivered by": "{{date}} द्वारा वितरित"
+    "Delivered by": "{{date}} द्वारा वितरित",
+    "Self pickup by": "{{time}} द्वारे स्व-उचल"
   },
   "Featured Categories": {
     "Featured Categories": "फिचर्ड कॅटेगरीज",
